commit cua hiep

--- a/CNW/CNW.csproj
+++ b/CNW/CNW.csproj
@@ -202,64 +202,64 @@
     <Content Include="Areas\AdminArea\Contents\vendor\vector-map\jqvmap.min.css" />
     <Content Include="Areas\AdminArea\Contents\vendor\wow\animate.css" />
     <Content Include="Areas\AdminArea\Contents\vendor\wow\wow.min.js" />
-    <Content Include="Contents\css\animate.css" />
-    <Content Include="Contents\css\bootstrap.min.css" />
-    <Content Include="Contents\css\flaticon.css" />
-    <Content Include="Contents\css\font-awesome.min.css" />
-    <Content Include="Contents\css\jquery-ui.min.css" />
-    <Content Include="Contents\css\owl.carousel.min.css" />
-    <Content Include="Contents\css\slicknav.min.css" />
-    <Content Include="Contents\css\style.css" />
-    <Content Include="Contents\icon-fonts\Flaticon.svg" />
-    <Content Include="Contents\icon-fonts\fontawesome-webfont.svg" />
-    <Content Include="Contents\img\arrow-down.png" />
-    <Content Include="Contents\img\arrow-up.png" />
-    <Content Include="Contents\img\banner-bg.jpg" />
-    <Content Include="Contents\img\bg-2.jpg" />
-    <Content Include="Contents\img\bg.jpg" />
-    <Content Include="Contents\img\blog-thumbs\1.jpg" />
-    <Content Include="Contents\img\blog-thumbs\2.jpg" />
-    <Content Include="Contents\img\cards.png" />
-    <Content Include="Contents\img\cart\1.jpg" />
-    <Content Include="Contents\img\cart\2.jpg" />
-    <Content Include="Contents\img\cart\3.jpg" />
-    <Content Include="Contents\img\favicon.ico" />
-    <Content Include="Contents\img\icons\1.png" />
-    <Content Include="Contents\img\icons\2.png" />
-    <Content Include="Contents\img\icons\3.png" />
-    <Content Include="Contents\img\logo-light.png" />
-    <Content Include="Contents\img\logo.png" />
-    <Content Include="Contents\img\mastercart.png" />
-    <Content Include="Contents\img\paypal.png" />
-    <Content Include="Contents\img\product\1.jpg" />
-    <Content Include="Contents\img\product\10.jpg" />
-    <Content Include="Contents\img\product\11.jpg" />
-    <Content Include="Contents\img\product\12.jpg" />
-    <Content Include="Contents\img\product\2.jpg" />
-    <Content Include="Contents\img\product\3.jpg" />
-    <Content Include="Contents\img\product\4.jpg" />
-    <Content Include="Contents\img\product\5.jpg" />
-    <Content Include="Contents\img\product\6.jpg" />
-    <Content Include="Contents\img\product\7.jpg" />
-    <Content Include="Contents\img\product\8.jpg" />
-    <Content Include="Contents\img\product\9.jpg" />
-    <Content Include="Contents\img\single-product\1.jpg" />
-    <Content Include="Contents\img\single-product\2.jpg" />
-    <Content Include="Contents\img\single-product\3.jpg" />
-    <Content Include="Contents\img\single-product\4.jpg" />
-    <Content Include="Contents\img\single-product\thumb-1.jpg" />
-    <Content Include="Contents\img\single-product\thumb-2.jpg" />
-    <Content Include="Contents\img\single-product\thumb-3.jpg" />
-    <Content Include="Contents\img\single-product\thumb-4.jpg" />
-    <Content Include="Contents\js\bootstrap.min.js" />
-    <Content Include="Contents\js\jquery-3.2.1.min.js" />
-    <Content Include="Contents\js\jquery-ui.min.js" />
-    <Content Include="Contents\js\jquery.nicescroll.min.js" />
-    <Content Include="Contents\js\jquery.slicknav.min.js" />
-    <Content Include="Contents\js\jquery.zoom.min.js" />
-    <Content Include="Contents\js\main.js" />
-    <Content Include="Contents\js\map.js" />
-    <Content Include="Contents\js\owl.carousel.min.js" />
+    <Content Include="Content\css\animate.css" />
+    <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\flaticon.css" />
+    <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\css\jquery-ui.min.css" />
+    <Content Include="Content\css\owl.carousel.min.css" />
+    <Content Include="Content\css\slicknav.min.css" />
+    <Content Include="Content\css\style.css" />
+    <Content Include="Content\icon-fonts\Flaticon.svg" />
+    <Content Include="Content\icon-fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\img\arrow-down.png" />
+    <Content Include="Content\img\arrow-up.png" />
+    <Content Include="Content\img\banner-bg.jpg" />
+    <Content Include="Content\img\bg-2.jpg" />
+    <Content Include="Content\img\bg.jpg" />
+    <Content Include="Content\img\blog-thumbs\1.jpg" />
+    <Content Include="Content\img\blog-thumbs\2.jpg" />
+    <Content Include="Content\img\cards.png" />
+    <Content Include="Content\img\cart\1.jpg" />
+    <Content Include="Content\img\cart\2.jpg" />
+    <Content Include="Content\img\cart\3.jpg" />
+    <Content Include="Content\img\favicon.ico" />
+    <Content Include="Content\img\icons\1.png" />
+    <Content Include="Content\img\icons\2.png" />
+    <Content Include="Content\img\icons\3.png" />
+    <Content Include="Content\img\logo-light.png" />
+    <Content Include="Content\img\logo.png" />
+    <Content Include="Content\img\mastercart.png" />
+    <Content Include="Content\img\paypal.png" />
+    <Content Include="Content\img\product\1.jpg" />
+    <Content Include="Content\img\product\10.jpg" />
+    <Content Include="Content\img\product\11.jpg" />
+    <Content Include="Content\img\product\12.jpg" />
+    <Content Include="Content\img\product\2.jpg" />
+    <Content Include="Content\img\product\3.jpg" />
+    <Content Include="Content\img\product\4.jpg" />
+    <Content Include="Content\img\product\5.jpg" />
+    <Content Include="Content\img\product\6.jpg" />
+    <Content Include="Content\img\product\7.jpg" />
+    <Content Include="Content\img\product\8.jpg" />
+    <Content Include="Content\img\product\9.jpg" />
+    <Content Include="Content\img\single-product\1.jpg" />
+    <Content Include="Content\img\single-product\2.jpg" />
+    <Content Include="Content\img\single-product\3.jpg" />
+    <Content Include="Content\img\single-product\4.jpg" />
+    <Content Include="Content\img\single-product\thumb-1.jpg" />
+    <Content Include="Content\img\single-product\thumb-2.jpg" />
+    <Content Include="Content\img\single-product\thumb-3.jpg" />
+    <Content Include="Content\img\single-product\thumb-4.jpg" />
+    <Content Include="Content\js\bootstrap.min.js" />
+    <Content Include="Content\js\jquery-3.2.1.min.js" />
+    <Content Include="Content\js\jquery-ui.min.js" />
+    <Content Include="Content\js\jquery.nicescroll.min.js" />
+    <Content Include="Content\js\jquery.slicknav.min.js" />
+    <Content Include="Content\js\jquery.zoom.min.js" />
+    <Content Include="Content\js\main.js" />
+    <Content Include="Content\js\map.js" />
+    <Content Include="Content\js\owl.carousel.min.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
@@ -278,6 +278,7 @@
     <Compile Include="Areas\AdminArea\AdminAreaAreaRegistration.cs" />
     <Compile Include="Areas\AdminArea\Controllers\IndexController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -392,29 +393,31 @@
     <Content Include="Areas\AdminArea\Contents\vendor\slick\slick.scss" />
     <Content Include="Areas\AdminArea\Views\Shared\_Layout_Admin.cshtml" />
     <Content Include="Areas\AdminArea\Views\Index\Index.cshtml" />
-    <Content Include="Contents\icon-fonts\Flaticon.eot" />
-    <Content Include="Contents\icon-fonts\Flaticon.ttf" />
-    <Content Include="Contents\icon-fonts\Flaticon.woff" />
-    <Content Include="Contents\icon-fonts\fontawesome-webfont.eot" />
-    <Content Include="Contents\icon-fonts\fontawesome-webfont.woff" />
-    <Content Include="Contents\icon-fonts\fontawesome-webfont.woff2" />
-    <Content Include="Contents\Source\bootstrap-4.2.1-dist.zip" />
-    <Content Include="Contents\Source\Flaticon.zip" />
-    <Content Include="Contents\Source\font-awesome-4.7.0.zip" />
-    <Content Include="Contents\Source\jquery-ui-1.12.1.zip" />
-    <Content Include="Contents\Source\jquery.nicescroll-master.zip" />
-    <Content Include="Contents\Source\OwlCarousel2-2.3.4_2.zip" />
-    <Content Include="Contents\Source\sass\style.scss" />
-    <Content Include="Contents\Source\SlickNav-master.zip" />
-    <Content Include="Contents\Source\zoom-master.zip" />
+    <Content Include="Content\icon-fonts\Flaticon.eot" />
+    <Content Include="Content\icon-fonts\Flaticon.ttf" />
+    <Content Include="Content\icon-fonts\Flaticon.woff" />
+    <Content Include="Content\icon-fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\icon-fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\icon-fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\Source\bootstrap-4.2.1-dist.zip" />
+    <Content Include="Content\Source\Flaticon.zip" />
+    <Content Include="Content\Source\font-awesome-4.7.0.zip" />
+    <Content Include="Content\Source\jquery-ui-1.12.1.zip" />
+    <Content Include="Content\Source\jquery.nicescroll-master.zip" />
+    <Content Include="Content\Source\OwlCarousel2-2.3.4_2.zip" />
+    <Content Include="Content\Source\sass\style.scss" />
+    <Content Include="Content\Source\SlickNav-master.zip" />
+    <Content Include="Content\Source\zoom-master.zip" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="packages.config" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Checkout\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\Header.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
