commit Layout, Partial View

--- a/CNW/CNW.csproj
+++ b/CNW/CNW.csproj
@@ -418,6 +418,8 @@
     <Content Include="Views\Checkout\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Header.cshtml" />
+    <Content Include="Views\Shared\Footer.cshtml" />
+    <Content Include="Views\Shared\HeroSection.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
