--- a/CNW/CNW.csproj
+++ b/CNW/CNW.csproj
@@ -419,7 +419,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Header.cshtml" />
     <Content Include="Views\Shared\Footer.cshtml" />
-    <Content Include="Views\Shared\HeroSection.cshtml" />
+    <Content Include="Views\Home\HomeBody.cshtml" />
+    <Content Include="Views\Category\Index.cshtml" />
+    <Content Include="Views\Category\SlideBar.cshtml" />
+    <Content Include="Views\Category\CategoryBody.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -431,7 +434,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\AdminArea\Models\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Category\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
