--- a/CNW/CNW.csproj
+++ b/CNW/CNW.csproj
@@ -288,6 +288,7 @@
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -443,6 +444,7 @@
     <Content Include="Views\Category\Index.cshtml" />
     <Content Include="Views\Category\SlideBar.cshtml" />
     <Content Include="Views\Category\CategoryBody.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
