update Controller Login, moldel Loin, ProductModel

--- a/CNW/Web.config
+++ b/CNW/Web.config
@@ -51,6 +51,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=DESKTOP-GF9FG24;initial catalog=CNW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="Model1" connectionString="data source=DESKTOP-GF9FG24;initial catalog=CNW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
