--- a/CNW/CNW.csproj
+++ b/CNW/CNW.csproj
@@ -410,10 +410,12 @@
     <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\connect.cs" />
+    <Compile Include="Models\CategoryModel.cs" />
+    <Compile Include="Models\ChiTietHDMoldel.cs" />
     <Compile Include="Models\Entities\Admin.cs" />
     <Compile Include="Models\Entities\Anh.cs" />
     <Compile Include="Models\Entities\Category.cs" />
@@ -427,6 +429,8 @@
     <Compile Include="Models\Entities\sysdiagram.cs" />
     <Compile Include="Models\Entities\User.cs" />
     <Compile Include="Models\Entities\UserAD.cs" />
+    <Compile Include="Models\HoaDonModel.cs" />
+    <Compile Include="Models\LoaiSPModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\Session\SessionHelper.cs" />
     <Compile Include="Models\Session\UserSesssion.cs" />
@@ -572,6 +576,8 @@
     <Content Include="Views\Category\SlideBar.cshtml" />
     <Content Include="Views\Category\CategoryBody.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Product\View.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
