--- a/CNW/CNW.csproj
+++ b/CNW/CNW.csproj
@@ -571,6 +571,7 @@
     <Compile Include="Areas\AdminArea\Controllers\ImagesAdminController.cs" />
     <Compile Include="Areas\AdminArea\Controllers\ProductAdminController.cs" />
     <Compile Include="Areas\AdminArea\Controllers\PDAdminController.cs" />
+    <Compile Include="Areas\AdminArea\Controllers\SizeController.cs" />
     <Compile Include="Areas\AdminArea\Models\AdminLoginModel.cs" />
     <Compile Include="Areas\AdminArea\Models\SessionHelper.cs" />
     <Compile Include="Areas\AdminArea\Models\AdminSession.cs" />
@@ -669,6 +670,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\AdminArea\Views\ProductDetail\" />
+    <Folder Include="Areas\AdminArea\Views\Size\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
